# Cognito_APIGatewayProxy_CDK

./: README.md
cdk/: branding.json  package-lock.json  package.json
cdk/lib/: handler-stack.ts
gateway_lambda/: Cargo.toml
gateway_lambda/src/: main.rs
nextjs/: .eslintrc.json  package-lock.json  package.json
nextjs/src/app/: globals.css  page.tsx  providers.tsx
nextjs/src/app/auth/callback/: page.tsx
trigger_lambda/: Cargo.toml
trigger_lambda/src/: main.rs
