[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

[package.metadata.lambda.env]
"TABLE_NAME"="SPADatabaseStack-SPATableFB30DBF5-U29CBTFG9A0E"


[dependencies]
anyhow = "1.0.82"
tokio = { version = "1", features = ["macros"] }
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }
aws_lambda_events = "0.16.0"
lambda_runtime = "0.13.0"
